--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -54,11 +54,11 @@ execute:
 
 ## Abstract
 
-**RATIONALE:** Racialized populations disproportionately experience exposures that impair lung function. Race-neutral reference equations are intended to mitigate bias due to disproportionate exposures at the cost of reduced precision. However, it is unclear what proportion of racial gaps in lung function is due to social determinants of health (SDoH). Previous studies on the racial gap in lung function between White and Black Americans have attributed 35-39% of the gap in adults to sitting height, 3-8% to poverty, and 2-5% to education. In children, sitting height reportedly accounted for 42-53% of the racial gap, while diet and socio-economic accounted for 7-10% of the gap. We hypothesized that disproportionate impact of SDoH that are captured in NAHNES data could help explain a larger proportion of racial gaps in lung function than previously reported. Better quantifying the contribution of measurable social determinants to racial differences in lung function can inform the debate on the proper assessment of lung function impairment across racial groups.
+**RATIONALE:** Racialized populations disproportionately experience exposures that impair lung function. Race-neutral reference equations are intended to mitigate bias due to disproportionate exposures at the cost of reduced precision. However, it is unclear what proportion of racial gaps in lung function is due to social determinants of health (SDoH). Previous studies on the racial gap in lung function between White and Black Americans have attributed 35-39% of the gap in adults to sitting height, 3-8% to poverty, and 2-5% to education. In children, sitting height reportedly accounted for 42-53% of the racial gap, while diet and socio-economic accounted for 7-10% of the gap. We hypothesized that disproportionate impact of SDoH that are captured in NHANES data could help explain a larger proportion of racial gaps in lung function than previously reported. Better quantifying the contribution of measurable social determinants to racial differences in lung function can inform the debate on the proper assessment of lung function impairment across racial groups.
 
 **METHODS:** We defined a series of nested reference populations using data from NHANES 2007-2012 participants. Starting with non-smokers without respiratory symptoms or diagnoses, we sequentially excluded those with confirmed occupational exposure to dust/fumes, physical inactivity, maternal tobacco use, obesity, no home ownership, no insurance, lower education, and self-reported unhealthy diet. Across successive populations, we compared average age-, sex-, and height-adjusted differences in FEV~1~ and FVC between minority race and ethnicity groups and White adults (≥20) and youth (\<20).
 
-**RESULTS:** From the base reference population to the most restrictive, the number of included participants decreased from 8,802 to 1,921. The percentage of Black participants decreased from 13% to 7% in youth and 11% to 4% in adults. Mexican American participants decreased from 15% to 10% in youth and 10% to 3% in adults. Other-Hispanic participants decreased from 7% to 5% in youth and 6% to 3% in adults. The proportion of participants remained close to the reference population for Asian and other-multiracial participants. After excluding individuals with unfavorable SDoH, the gap between Black and White Americans in FEV~1~ and FVC reduced by 25% to 26% in children and youth, and by 26% to 19% in adults over 20. The racial gap between Asian and White Americans reduced by 7% to 13% in youth but increased by 14% to 11% in adults. Mexican Americans had slightly higher FEV~1~ and FVC than White Americans in the baseline population, and excluding those with unfavorable SDoH widened the gap by 0.09 L to 0.06 L in youth and 0.03 L to 0.03 L in adults.
+**RESULTS:** From the base reference population to the most restrictive, the number of included participants decreased from 8,802 to 1,921. The percentage of Black participants decreased from 13% to 7% in youth and 11% to 4% in adults. Mexican American participants decreased from 15% to 10% in youth and 10% to 3% in adults. Other-Hispanic participants decreased from 7% to 5% in youth and 6% to 3% in adults. The proportion of participants remained close to the reference population for Asian and other-multiracial participants. After excluding individuals with unfavorable SDoH, the gap between Black and White Americans in FEV~1~ and FVC reduced by 25% and 26% in children and youth, and by 26% and 19%, respectively in adults over 20. The racial gap between Asian and White Americans reduced by 7% and 13% in youth but increased by 14% and 11%, respectively in adults. Mexican Americans had slightly higher FEV~1~ and FVC than White Americans in the baseline population, and excluding those with unfavorable SDoH widened the gap by 0.09 L and 0.06 L in youth and 0.03 L and 0.03 L in adults.
 
 **CONCLUSIONS:** The SDoH investigated herein disporportionately affected Black, Mexican American, and Other Hispanic populations, and explained a higher proportion of racial disparities in lung function than previously reported.
 
@@ -778,7 +778,7 @@ flowchart TD
 
 ```{r, warning=FALSE, message=FALSE}
 #| label: fig-popchange
-#| fig-cap: Changes in population composition in successively more restrictive reference populations. Each reference population adds additional exclusion criteria based on social determinants of health. Race and ethnicity groups that experience a decline in their percentage of the population compared to the reference baseline (moving from left to right) are disproportionately affected by the harmful social determinants of health that are being considered here. 
+#| fig-cap: Changes in population composition in successively more restrictive reference populations. Each reference population adds additional exclusion criteria based on social determinants of health. Race and ethnicity groups that experience a decline in their percentage of the population compared to the reference baseline (moving from left to right) are disproportionately affected by social determinants of health that are being considered here. 
 
 
 refs_adult_all_races <- createCohort("adult", includedRace = c(1,2,3,4,5,6,7))
