--- a/references.bib
+++ b/references.bib
@@ -486,3 +486,17 @@ abstract = {  The multiple regression equation predicting lung function values f
 	author = {Adibi, Amin and Sadatsafavi, Mohsen and Brigham, Emily P. and Bhatt, Surya},
 	journal = {American Journal of Respiratory and Critical Care Medicine}
 }
+
+@article{liu2021,
+	title = {Allostatic load scoring using item response theory},
+	author = {Liu, Shelley H. and Juster, Robert-Paul and {Dams-O{\textquoteright}Connor}, Kristen and Spicer, Julie},
+	year = {2021},
+	month = {02},
+	date = {2021-02},
+	journal = {Comprehensive Psychoneuroendocrinology},
+	pages = {100025},
+	volume = {5},
+	doi = {10.1016/j.cpnec.2020.100025},
+	url = {http://dx.doi.org/10.1016/j.cpnec.2020.100025},
+	langid = {en}
+}
