--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -448,7 +448,7 @@ Of the 30,442 participants in NHANES 2007-2012, we included 17,032 participants 
 
 ```{r}
 
-race_estimate <- function(df, outcome, single_sex=FALSE, includedRace) {
+race_estimate <- function(df, outcome, single_sex=FALSE) {
   if (single_sex) {formula_text <- as.formula(paste0(outcome, " ~ age + height + race"))}
   else {formula_text <- as.formula(paste0(outcome, " ~ sex + age + height + race"))}
   lm_fit <- lm(formula_text, data=df, weights=MEC6YR)
@@ -472,22 +472,22 @@ plot_racial_gap_change <- function(refs_adult_list, refs_youth_list, single_sex 
   sequence_youth_df$ref <- factor(sequence_youth_df$ref, levels=sequence_youth_df$ref)
   
   race_coeffs_fev1_adult <- 
-    map_df(refs_adult_list, function(x) race_estimate(x, metric1, single_sex = single_sex, includedRace=includedRace)) %>% 
+    map_df(refs_adult_list, function(x) race_estimate(x, metric1, single_sex = single_sex)) %>% 
     mutate(sequence=sequence_adult_df$ref,
            Measure = metric1) 
   
   race_coeffs_fev1_youth <-
-    map_df(refs_youth_list, function(x) race_estimate(x, metric1, single_sex = single_sex, includedRace=includedRace)) %>%
+    map_df(refs_youth_list, function(x) race_estimate(x, metric1, single_sex = single_sex)) %>%
     mutate(sequence=sequence_youth_df$ref,
            Measure = metric1) 
   
   race_coeffs_fvc_adult <- 
-    map_df(refs_adult_list, function(x) race_estimate(x, metric2, single_sex = single_sex, includedRace=includedRace)) %>%
+    map_df(refs_adult_list, function(x) race_estimate(x, metric2, single_sex = single_sex)) %>%
     mutate(sequence=sequence_adult_df$ref,
            Measure = metric2)
   
   race_coeffs_fvc_youth <- 
-    map_df(refs_youth_list, function(x) race_estimate(x, metric2, single_sex = single_sex, includedRace=includedRace)) %>% 
+    map_df(refs_youth_list, function(x) race_estimate(x, metric2, single_sex = single_sex)) %>% 
     mutate(sequence=sequence_youth_df$ref,
            Measure = metric2)
   
